# RectangularTargetDetection

./: CMakeLists.txt  README.md  main.cpp  run.sh  test_image_2.txt
